/* Copyright 2020 Energinet DataHub A/S
 *
 * Licensed under the Apache License, Version 2.0 (the "License2");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";
import "Contracts/ActorRoleV1.proto";

option csharp_namespace = "Energinet.DataHub.ProcessManager.Abstractions.Contracts";

message StartOrchestrationInstanceV1 {
  string orchestration_name = 1; // The name of the orchestration to start.
  int32 orchestration_version = 2; // The version of the orchestration to start.

  reserved 4; // Reserve the "4" number since that was the "string started_by_actor_id = 4" field.

  string input = 3; // The input to the orchestration serialized to string.
  StartOrchestrationInstanceInputFormatV1 input_format = 5; // The format the input field is serialized as.
  string input_type = 6; // Name of the input type (example: "RequestCalculatedEnergyTimeSeriesInputV1").

  string actor_message_id = 7; // The id of the actor message that triggered the orchestration.
  string transaction_id = 8; // The id of the transaction that triggered the orchestration.
  optional string metering_point_id = 9; // The id of the metering point for which the orchestration is operating.

  StartOrchestrationInstanceActorV1 started_by_actor = 10; // The actor that started the orchestration.
}

enum StartOrchestrationInstanceInputFormatV1 {
  UnspecifiedFormat = 0;
  Json = 1;
}

message StartOrchestrationInstanceActorV1 {
  string actor_number = 1; // The actor GLN number.
  ActorRoleV1 actor_role = 2; // The actor role.
}
